--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9872,3 +9872,43 @@ button.picker__close:focus {
   /*shape-rendering: crispEdges;*/
 }
 
+/**
+ * For sticky footer using MaterializeCSS
+ * flexbox styling
+ */
+
+body {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+/**
+ * Add padding to main and footer containers
+ * for authenticated users
+ */
+
+.main-logged-in,
+.footer-logged-in {
+  padding-left: 300px;
+}
+
+.side-nav {
+  top: 65px;
+}
+
+.page-footer {
+  background-color: #80cbc4;
+}
+
