--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -1,4 +1,4 @@
-// Custom styling
+// Custom styles
 
 /**
  * For sticky footer using MaterializeCSS
@@ -22,10 +22,24 @@ main {
     padding-left: 300px;
 }
 
+@media only screen and (max-width : 992px) {
+    .main-logged-in, .footer-logged-in {
+        padding-left: 0;
+    }
+}
+
+/**
+ * Side Nav
+ */
 .side-nav {
     top: 65px;
 }
 
+#sidenav-overlay {
+    margin-left: 300px;
+}
+
+// Footer
 .page-footer {
     background-color: #80cbc4;
 }
