--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -39,6 +39,11 @@ main {
     margin-left: 300px;
 }
 
+// Tabs
+#add-swine-tabs .tabs {
+    overflow-x: hidden;
+}
+
 // Footer
 .page-footer {
     background-color: #80cbc4;
