Initial working Breeder's UI w/ seeded data on viewing registered swine

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9923,6 +9923,10 @@ main {
   margin-left: 300px;
 }
 
+.brand-logo {
+  padding-left: 1rem !important;
+}
+
 #add-swine-tabs .tabs {
   overflow-x: hidden;
 }
