--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -39,6 +39,11 @@ main {
     margin-left: 300px;
 }
 
+// Navigation
+.brand-logo {
+    padding-left: 1rem !important;
+}
+
 // Tabs
 #add-swine-tabs .tabs {
     overflow-x: hidden;
