Improve side navigation for Admin and Breeder

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9923,6 +9923,10 @@ main {
   margin-left: 300px;
 }
 
+#slide-out div.user-view {
+  padding-bottom: 16px;
+}
+
 .brand-logo {
   padding-left: 1rem !important;
 }
