Initial view for Managing Breeds

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -53,6 +53,11 @@ main {
     overflow-x: hidden;
 }
 
+// Title page
+.title-page {
+    font-weight: 300;
+}
+
 // Footer
 .page-footer {
     background-color: #80cbc4;
