--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9964,6 +9964,23 @@ blockquote.info {
   background-color: #e7f5f4;
 }
 
+/*
+ * Registry Certificate
+ */
+
+#registry-certificate-container {
+  border-radius: 25px;
+}
+
+#registry-certificate-container table td {
+  padding: 2px 0px;
+}
+
+#registry-certificate-container #logo-container {
+  border: 2px solid #29b6f6;
+  border-radius: 10px;
+}
+
 .page-footer {
   background-color: #80cbc4;
 }
