--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -82,6 +82,22 @@ blockquote.info {
 	background-color: #e7f5f4;
 }
 
+/*
+ * Registry Certificate
+ */
+#registry-certificate-container {
+    border-radius: 25px;
+}
+
+#registry-certificate-container table td {
+    padding: 2px 0px;
+}
+
+#registry-certificate-container #logo-container {
+    border: 2px solid #29b6f6;
+    border-radius: 10px;
+}
+
 // Footer
 .page-footer {
     background-color: #80cbc4;
