--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -15,20 +15,6 @@ main {
 }
 
 /**
- * Add padding to main and footer containers
- * for authenticated users
- */
-.main-logged-in, .footer-logged-in {
-    padding-left: 300px;
-}
-
-@media only screen and (max-width : 992px) {
-    .main-logged-in, .footer-logged-in {
-        padding-left: 0;
-    }
-}
-
-/**
  * Side Nav
  */
 .side-nav {
@@ -36,7 +22,9 @@ main {
 }
 
 #sidenav-overlay {
+    top: 65px;
     margin-left: 300px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 #slide-out div.user-view {
@@ -55,7 +43,7 @@ main {
 
 // Title page
 .title-page {
-    font-weight: 300;
+    margin-top: 3rem;
 }
 
 /*
